--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,12 +8,60 @@
     tools:context=".MainActivity">
 
     <org.opencv.android.JavaCameraView
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:id="@+id/cameraview"
-        app:show_fps="true">
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        android:id="@+id/CameraView" />
 
-    </org.opencv.android.JavaCameraView>
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="YOLO"
+        android:text="YOLO"
+        app:layout_constraintBottom_toBottomOf="@+id/CameraView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<androidx.constraintlayout.widget.ConstraintLayout-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:orientation="vertical"-->
+<!--    tools:context=".MainActivity">-->
+
+<!--    <org.opencv.android.JavaCameraView-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:id="@+id/cameraview"-->
+<!--        app:show_fps="true">-->
+
+<!--    </org.opencv.android.JavaCameraView>-->
+
+<!--    <Button-->
+<!--        android:id="@+id/yolo"-->
+<!--        android:onClick="yolo"-->
+<!--        android:layout_width="95dp"-->
+<!--        android:layout_height="37dp"-->
+<!--        android:text="Yolo"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/cameraview"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/cameraview"-->
+<!--        app:layout_constraintVertical_bias="0.94" />-->
+
+
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
